# Practice-of-Compilation-System

./: .gitignore  CMakeLists.txt  Makefile  README.md  ToyC编译器课程设计实验报告.docx  build.bat  main.cpp
bug/: README.md
bug/fixed/: README.md
bug/open/: README.md
include/ast/: AST.h
include/semantic/: ConstEvaluator.h  SemanticAnalyzer.h  Symbol.h  SymbolTable.h
src/: AST.h  CodeGenerator.cpp  CodeGenerator.h  CompileTimeEvaluator.cpp  CompileTimeEvaluator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Token.h  main.cpp
src/semantic/: ConstEvaluator.cpp  SemanticAnalyzer.cpp  Symbol.cpp  SymbolTable.cpp
test/: run_tests.ps1  test11_void.tc  test12_negative.tc  test13_scope.tc  test14_break_continue.tc  test5_while.tc  test7_global.tc  test8_const.tc  test9_relation.tc
